--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </head>
 <body class="m-10">
     <header>
+
 <div class="flex border-2  justify-between p-3 ">
     <div class="text-5xl font-bold ">Ma<span class="text-red-600">r</span>uf</div>
     <div class="flex-wrap p-2 " >
@@ -39,6 +40,8 @@
     </div>
 </div>
     </header> <br><br>
+
+
     <main>
 <div>
     <div class="flex justify-between ">
@@ -54,7 +57,7 @@
         </div>
     </div>
 
-   <div class=" m-20 bg-sky-300 p-3 ">
+   <div class=" px-10 bg-sky-300 ">
     <h3 class="text-3xl text-center">About Me </h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti debitis officiis molestias. Aspernatur non labore, itaque cumque autem molestiae doloribus!</p>
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 p-5 ml-6">
@@ -64,7 +67,7 @@
         </div>
         <div class="text-center">
             <p class="font-medium">Email:</p>
-            <h3 class="font-bold">marufhasanlipu@gmail.com</h3>
+            <h3 class="font-bold ">marufhasanlipu@gmail.com</h3>
         </div>
         <div class="text-center">
             <p class="font-medium">Date of Birth:</p>
